# Aegis

./: .gitignore  README.md  pyproject.toml
.artifacts/: compiled.json
.github/workflows/: tests.yml
assurance/: formal_report.json  formal_report.md  hazard_log.yaml  requirements.yaml  safety_case.md  safety_case.yaml  safety_report.json  safety_report.md  traceability_report.json  traceability_report.md
configs/: invalid_autonomous_abort.yaml  semantic_same_units.yaml  valid_mission.yaml  valid_tight_aoa.yaml
docs/: architecture.md  assurance.md  case_studies.md  phased_implementation.md
failures/2026-02-24_031327_657959/: report.md  scenario.json  trace.csv
failures/2026-02-24_031327_665280/: report.md  scenario.json
failures/2026-02-24_031327_671201/: report.md
failures/2026-02-24_031327_676578/: report.md
failures/2026-02-24_031327_682677/: report.md  scenario.json
failures/2026-02-24_031327_688712/: report.md  trace.csv
failures/2026-02-24_031327_693403/: report.md  scenario.json  trace.csv
failures/2026-02-24_031327_698659/: report.md  scenario.json
failures/2026-02-24_031327_702816/: report.md  scenario.json
failures/2026-02-24_031327_707566/: report.md
failures/2026-02-24_031327_713748/: report.md  scenario.json
failures/2026-02-24_031327_721093/: report.md
failures/2026-02-24_031327_725059/: report.md  scenario.json  trace.csv
failures/2026-02-24_031327_730700/: report.md  scenario.json
failures/2026-02-24_031327_735511/: report.md  trace.csv  (+1 more)
formal/: mode_logic.tla
scripts/: assurance  mcv  pbt  pipeline
src/: cli.py
(+441 files in other folders)
